# tether

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dory_srs_22_variables.srs
.github/workflows/: ci.yml
client/: package-lock.json  package.json  tsconfig.json
client/src/: demo.ts  gated-transfer.ts  mock-transfer.ts  wdk-transfer.ts
client/src/__tests__/: gated-transfer.test.ts
contracts/: Makefile  foundry.toml
contracts/script/: DeployTestUSDT.s.sol
contracts/src/: TestUSDT.sol
contracts/test/: TestUSDT.t.sol
cosigner/: Cargo.toml  Dockerfile
cosigner/src/: main.rs
demo/: index.html  package-lock.json  package.json  server.js
models/: authorization.onnx  vocab.json
prover/: Cargo.toml  Dockerfile  dory_srs_22_variables.srs
prover/src/: main.rs
x402-jolt-usdt0/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
x402-jolt-usdt0/a2a/: agent-card.js  task-handler.js
x402-jolt-usdt0/cache/: generate-cache.js
x402-jolt-usdt0/demo/http/: index.html  package-lock.json  package.json  vite.config.js
x402-jolt-usdt0/demo/http/src/: App.jsx
x402-jolt-usdt0/demo/mcp/: server.js
x402-jolt-usdt0/docker/: Dockerfile.dashboard  Dockerfile.server
x402-jolt-usdt0/scripts/: fund-demo-wallet.js
x402-jolt-usdt0/shared/: event-steps.js
x402-jolt-usdt0/wdk/: facilitator-adapter.js  proof-gated-adapter.js
x402-jolt-usdt0/x402/: client.js  config.js  facilitator.js  middleware.js  server.js  signing.js
x402-jolt-usdt0/zk/: cosigner-bridge.js  load-proof.js  proof-binding.js  proof-cache.js  prover-bridge.js  scenarios.js
