[package]
name = "zkml-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
# Pinned via Cargo.lock; branch tracks upstream jolt-atlas workspace
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", branch = "dev", package = "jolt-core", default-features = true }
zkml-jolt-core = { path = "../../jolt-atlas/zkml-jolt-core" }
onnx-tracer = { path = "../../jolt-atlas/onnx-tracer", features = ["matmul_power_of_two_padding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"

# Must match jolt-atlas workspace patches; Cargo.lock pins the exact commit
[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
